# storage/api-docs/api-docs.json
@@ -54,6 +54,39 @@
                 }
             }
         },
+        "/payment-method": {
+            "get": {
+                "tags": [
+                    "Payment Methods"
+                ],
+                "summary": "List of payment method",
+                "description": "Returns list of available payment method",
+                "operationId": "getPaymentMethods",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PropertyTypeResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/property-type": {
             "get": {
                 "tags": [
